# wire-sysio

./: .clang-format  .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  000-_catch_main_8cpp.html  000-_catch_main_8cpp.js  000-_catch_main_8cpp.tex  000-_catch_main_8cpp__incl.map  000-_catch_main_8cpp__incl.md5  000-_catch_main_8cpp_source.html  000-_catch_main_8cpp_source.tex  010-_test_case_8cpp.html  010-_test_case_8cpp.js  010-_test_case_8cpp.tex  010-_test_case_8cpp__incl.map  010-_test_case_8cpp__incl.md5  010-_test_case_8cpp_add2051c05ae0af82b9f85a7aed140679_cgraph.map  010-_test_case_8cpp_add2051c05ae0af82b9f85a7aed140679_icgraph.map  010-_test_case_8cpp_add2051c05ae0af82b9f85a7aed140679_icgraph.md5  010-_test_case_8cpp_ae4a225917ee96bff1145341e8084ab47_cgraph.md5  010-_test_case_8cpp_aede3c4edb62337049cf2b7fc463b9539_cgraph.map  010-_test_case_8cpp_source.html  010-_test_case_8cpp_source.tex  020-_test_case-1_8cpp.html  020-_test_case-1_8cpp.js  020-_test_case-1_8cpp.tex  020-_test_case-1_8cpp__incl.map  020-_test_case-1_8cpp__incl.md5  020-_test_case-1_8cpp_source.html  020-_test_case-1_8cpp_source.tex  020-_test_case-2_8cpp.html  020-_test_case-2_8cpp.js  020-_test_case-2_8cpp.tex  020-_test_case-2_8cpp__incl.map  020-_test_case-2_8cpp__incl.md5  020-_test_case-2_8cpp_a4a40313d0fbb58ba60bec971f3f51bd2_cgraph.map  020-_test_case-2_8cpp_a4a40313d0fbb58ba60bec971f3f51bd2_cgraph.md5  020-_test_case-2_8cpp_add2051c05ae0af82b9f85a7aed140679_cgraph.md5  (+73149 more)
benchmark/: CMakeLists.txt  abi_serializer.cpp  alt_bn_128.cpp  auth.cpp  benchmark.cpp  benchmark.hpp  blake2.cpp  bls.cpp  hash.cpp  key.cpp  kv_benchmark.cpp  main.cpp  merkle.cpp  modexp.cpp  trace_api_json.cpp
benchmark/dedup/: dedup_bench.cpp
contracts/: .gitignore  CMakeLists.txt  README.md  native-debug.md  protocol-buffers.md
contracts/sysio.authex/: CMakeLists.txt  sysio.authex.abi  sysio.authex.wasm
contracts/sysio.authlink/: CMakeLists.txt  sysio.authlink.wasm
contracts/sysio.bios/: CMakeLists.txt  sysio.bios.abi  sysio.bios.cpp  sysio.bios.hpp  sysio.bios.wasm
contracts/sysio.cap/: CMakeLists.txt  sysio.cap.abi  sysio.cap.wasm
contracts/sysio.chains/: CMakeLists.txt  sysio.chains.abi  sysio.chains.wasm
contracts/sysio.chalg/: CMakeLists.txt  README.md  sysio.chalg.abi  sysio.chalg.cpp.actions.cpp  sysio.chalg.dispatch.cpp  sysio.chalg.sysio.chalg.cpp.desc  sysio.chalg.wasm
contracts/sysio.councl/: CMakeLists.txt  DESIGN.md  README.md  sysio.councl.abi  sysio.councl.wasm
contracts/sysio.dclaim/: CMakeLists.txt  sysio.dclaim.abi  sysio.dclaim.wasm
contracts/sysio.depot/: CMakeLists.txt  sysio.depot.abi  sysio.depot.wasm
contracts/sysio.epoch/: CMakeLists.txt  README.md  sysio.epoch.abi  sysio.epoch.cpp.actions.cpp  sysio.epoch.dispatch.cpp  sysio.epoch.sysio.epoch.cpp.desc  sysio.epoch.wasm
contracts/sysio.msgch/: CMakeLists.txt  README.md  sysio.msgch.abi  sysio.msgch.cpp.actions.cpp  sysio.msgch.dispatch.cpp  sysio.msgch.sysio.msgch.cpp.desc  sysio.msgch.wasm
contracts/sysio.msig/: CMakeLists.txt  sysio.msig.abi  sysio.msig.cpp  sysio.msig.hpp  sysio.msig.wasm
contracts/sysio.opreg/: CMakeLists.txt  sysio.opreg.abi  sysio.opreg.wasm
contracts/sysio.reserv/: CMakeLists.txt  sysio.reserv.abi  sysio.reserv.wasm
contracts/sysio.roa/: CMakeLists.txt  native.hpp  sysio.roa.abi  sysio.roa.cpp  sysio.roa.hpp  sysio.roa.wasm
contracts/sysio.system/: CMakeLists.txt  EMISSIONS.md  sysio.system.abi  sysio.system.wasm
contracts/sysio.token/: CMakeLists.txt  sysio.token.abi  sysio.token.bad.abi  sysio.token.cpp  sysio.token.hpp  sysio.token.wasm
contracts/sysio.tokens/: CMakeLists.txt  sysio.tokens.abi  sysio.tokens.wasm
contracts/sysio.uwrit/: CMakeLists.txt  README.md  sysio.uwrit.abi  sysio.uwrit.cpp.actions.cpp  sysio.uwrit.dispatch.cpp  sysio.uwrit.sysio.uwrit.cpp.desc  sysio.uwrit.wasm
contracts/sysio.wrap/: CMakeLists.txt  (+4 more)
libraries/: CMakeLists.txt
scripts/: CMakeLists.txt  build-with-github-vcpkg-cache.sh  dev-chain-run-nodeop.fish  docker-build.sh  gen_export_list.py  gen_native_dispatch.py  install_testharness_symlinks.cmake  pinned_build.sh  sysio-tn_bounce.sh  sysio-tn_down.sh  sysio-tn_roll.sh  sysio-tn_up.sh
tests/: CMakeLists.txt  Cluster.py  Node.py  TestHelper.py  WalletMgr.py  auto_bp_gossip_peering_test.py  auto_bp_peering_test.py  auto_bp_peering_test_shape.json  block_log.cpp  block_log_retain_blocks_test.py  block_log_util_test.py  bridge_consecutive_shape.json  bridge_for_fork_test_shape.json  chain_plugin_tests.cpp  chain_test_utils.hpp  cli_test.py  clio_em_key_test.py  clio_set_syscode_test.py  cluster_launcher.py  compute_transaction_test.py  db_modes_test.sh  disaster_recovery.py  disaster_recovery_2.py  disaster_recovery_2_test_shape.json  disaster_recovery_3.py  distributed-transactions-test.py  full-version-label.sh  gelf_test.py  get_account_test.py  get_kv_rows_test.py  get_producers_tests.cpp  get_table_seckey_tests.cpp  get_table_tests.cpp  http_plugin_test.py  impaired_network.py  interrupt_read_only_trx_test.py  interrupt_trx_test.py  keosd_auto_launch_test.py  kiod_auto_launch_test.py  large-lib-test.py  (+116 more)
unittests/: .gitignore  CMakeLists.txt  abi_tests.cpp  action_ordering_tests.cpp  api_tests.cpp  auth_tests.cpp  be_key_codec_tests.cpp  blake3_encoder_tests.cpp  block_header_state_tests.cpp  block_header_tests.cpp  block_log_extract.cpp  block_log_get_block_tests.cpp  block_state_tests.cpp  block_tests.cpp  block_timestamp_tests.cpp  blocks_log_replay_tests.cpp  bls_primitives_tests.cpp  bootseq_tests.cpp  chain_tests.cpp  chainbase_fast_path_tests.cpp  checktime_tests.cpp  controller_sync_tests.cpp  crypto_golden_tests.cpp  crypto_primitives_tests.cpp  currency_tests.cpp  database_tests.cpp  deep_mind_tests.cpp  delay_tests.cpp  dry_run_trx_tests.cpp  ed25519_tests.cpp  eosio_system_tester.hpp  eosvmoc_limits_tests.cpp  expandauth_tests.cpp  finality_core_tests.cpp  finality_misc_tests.cpp  finality_proof.hpp  finality_test_cluster.cpp  finality_test_cluster.hpp  finality_tests.cpp  finalizer_tests.cpp  (+81 more)
(+2722 files in other folders)
